--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林), server: 45.144.176.135, port: 3002, type: ss, cipher: aes-256-cfb, password: 36rtuhZfAeUh78Sa}
-  - {name: 🇮🇳 印度-258.7KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.37MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.97MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-267.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-528.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-331.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-186.9KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.45MB/s(Youtube:不良林), server: 185.160.26.35, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2, server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-459.4KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
